--- a/_layouts/_olddefault.html
+++ b/_layouts/_olddefault.html
@@ -7,13 +7,13 @@
 
     {% include header.html %}
 
-    <div class="home-content">
+    <div class="page-content">
       <div class="wrapper">
         {{ content }} 
           <!--  -->
       </div>
     </div>
-<!-- <main class="Site-content"></main> -->
+<main class="Site-content"></main>
     {% include footer.html %}
 
   </body>
