--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -13,3 +13,30 @@
     margin-left: -250px;
     margin-top: -250px;
 }
+body{
+    background-color:#e2e2e2;
+}
+h1, h2 {
+    color: #777;
+    text-align: center;
+    font-family: josefin-sans, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16pt;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    position: relative;
+    top: 43%;
+    transform: translateY(-50%);
+}
+a {
+    text-decoration: none;
+    color: #777;
+    padding: 10px;
+}
+user agent stylesheet
+a:-webkit-any-link {
+    color: -webkit-link;
+    cursor: pointer;
+    text-decoration: underline;
+}
